nested/06.07.00.createBasNSG.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "Selected region where resources will be deployed."
      }
    },
    "nsgBastion": {
      "type": "string",
      "metadata": {
        "description": "Name of bastion host."
      }
    },
    "basPubIpAddressCidr": {
      "type": "string",
      "metadata": {
        "description": "Public IP of bastion host."
      }
    }
  },
  "variables": {
    "nsgRuleIng01": {
      "name": "Allow443FromInternet",
      "access": "Allow",
      "description": "Allow inbound HTTPS from Internet.",
      "destinationAddressPrefix": "[parameters('basPubIpAddressCidr')]",
      "destinationPortRange": "443",
      "direction": "Inbound",
      "priority": 100,
      "protocol": "Tcp",
      "sourceAddressPrefix": "Internet",
      "sourcePortRange": "*"
    },
    "nsgRuleIng02": {
      "name": "Allow443FromGatewayMgr",
      "access": "Allow",
      "description": "Allow inbound HTTPS traffic from Gateway Manager.",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationPortRange": "[parameters('basPubIpAddressCidr')]",
      "direction": "Inbound",
      "priority": 110,
      "protocol": "Tcp",
      "sourceAddressPrefix": "GatewayManager",
      "sourcePortRange": "*"
    },
    "nsgRuleEgr01": {
      "name": "AllowRemoteToVirtualNetwork",
      "access": "Allow",
      "description": "Allow outbound RDP or SSH traffic from bastion to virtual network.",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationPortRange": "3389,22",
      "direction": "Outbound",
      "priority": 200,
      "protocol": "Tcp",
      "sourceAddressPrefix": "[parameters('basPubIpAddressCidr')]",
      "sourcePortRange": "3389,22"
    },
    "nsgRuleEgr02": {
      "name": "AllowAzureServices",
      "access": "Allow",
      "description": "Allow outbound HTTPS traffic to Azure Services.",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationPortRange": "443",
      "direction": "Outbound",
      "priority": 210,
      "protocol": "Tcp",
      "sourceAddressPrefix": "[parameters('basPubIpAddressCidr')]",
      "sourcePortRange": "443"
    },
    "nsgBasRules": [
      "[variables('nsgRuleIng01')]",
      "[variables('nsgRuleIng02')]",
      "[variables('nsgRuleEgr01')]",
      "[variables('nsgRuleEgr02')]"
    ]
  },
  "resources": [
    {
      "comments": "06.06.00.createBasNSG",
      "name": "[concat(parameters('nsgBastion'))]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-10-01",
      "location": "[parameters('location')]",
      "properties": {
        "copy": [
          {
            "name": "nsgRulesCopy",
            "count": "[length(variables('nsgBasRules'))]",
            "input": {
              "name": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy').name]]",
              "properties": {
                "access": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].access]",
                "description": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].description]",
                "destinationAddressPrefix": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].destinationAddressPrefix]",
                "destinationPortRange": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].destinationPortRange]",
                "direction": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].direction]",
                "priority": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].priority]",
                "protocol": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].protocol]",
                "sourceAddressPrefix": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].sourceAddressPrefix]",
                "sourcePortRange": "[variables('nsgBasRules')[copyIndex('nsgRulesCopy')].sourcePortRange]"
              }
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "nsgBasId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('nsgBastion'))]"
    }
  }
}
